[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
bcrypt = "0.19.0"
chrono = "0.4.44"
jsonwebtoken = "10.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
store = { version = "0.1.0", path = "../store" }
tokio = {version="1.50.0" , features = ["rt-multi-thread"]}
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
uuid = "1.22.0"
