[package]
name = "store"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version="0.4.44", features=["serde"]}
serde = {version="1.0.228",features = ["derive"]}
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
uuid = {version="1.22.0", features=["serde"]}
